Fix lightning-logs/debug.log path (MAJOR BUG)
Major bug, lightning daemon won't start with tilda (~) instead it wants a full path to log file in the config file

--- a/scripts/debian-9/config
+++ b/scripts/debian-9/config
@@ -3,4 +3,4 @@ rgb=FFFFFF
 bind-addr=YOUR_INTERNAL_IP
 announce-addr=YOUR_EXTERNAL_IP
 network=bitcoin
-log-file=~/lightning-logs/debug.log
+log-file=/ABSOLUTE/PATH/TO/HOME/FOLDER/lightning-logs/debug.log
