--- a/scripts/gcs_mean_bitnami/config
+++ b/scripts/gcs_mean_bitnami/config
@@ -3,4 +3,4 @@ rgb=FFFFFF
 bind-addr=YOUR_INTERNAL_IP
 announce-addr=YOUR_EXTERNAL_IP
 network=bitcoin
-log-file=~/lightning-logs/debug.log
+log-file=/home/bitnami/lightning-logs/debug.log
